--- a/src/Components/home.component/home.css
+++ b/src/Components/home.component/home.css
@@ -25,14 +25,14 @@
 }
 
 .sub-head{
-  color: #2C3182;
+  color: #291f71;
   font-weight: bold;
   font-size: 26px;
 }
 
 .rule{
   height: 10px;
-  background: #2C3182;
+  background:#291f71;
   border-radius: 10px;
   width: 100px;
   margin-bottom: 20px;
