--- a/src/Components/Header.Component/header.css
+++ b/src/Components/Header.Component/header.css
@@ -7,7 +7,8 @@ header{
   color: white;
   box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.2);
   min-height: 75px !important;
-  border-top: 5px solid #291f71;;
+  border-top: 5px solid #291f71;
+  z-index: 5;
 }
 
 header h2{
