--- a/src/Components/Header.Component/header.css
+++ b/src/Components/Header.Component/header.css
@@ -1,5 +1,5 @@
 header{
-  background: #F9ED69;
+  background: rgba(250, 246, 77, 1);
   padding: 20px 15px;
   padding-bottom: 5px;
   position: fixed;
