--- a/src/Components/AddPost.Component/addPost.css
+++ b/src/Components/AddPost.Component/addPost.css
@@ -1,6 +1,46 @@
-.wrap{
-  padding: 20px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 20px;
+.head-section{
+  background-image: url('./../../back.jpeg');
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  padding: 20% 10%;
+  padding-bottom: 10%; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.head-section input{
+  font-size: 1.5em;
+  padding: 8px;
+  font-weight: bold;
+  background: transparent;
+  border: 0; 
+  border-bottom: 2px solid #fff;
+  color: #fff;
+}
+
+.head-section input:focus{
+  outline: none;
+}
+
+#addPost-bottom{
+  
+}
+
+#addPost-bottom textarea{
+  width: 350px;
+  margin: 10px 30px;
+}
+
+@media(min-width: 768px){
+  .head-section{
+    padding: 10%;
+  }
+
+  .head-section input{
+    font-size: 3em;
+    padding: 20px;
+  }
 }
