--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Cuprum');
+@import url('https://fonts.googleapis.com/css?family=Cuprum|Varela+Round');
 
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   background: rgba(0, 0, 0, 0.1);
+}
+
+a{
+  color: #fff;
+}
+
+a:hover, a:focus{
+  text-decoration: none;
+  color: #fff;
 }
