--- a/src/Components/home.component/post.css
+++ b/src/Components/home.component/post.css
@@ -1,10 +1,12 @@
 .post-card{
-  width: 400px;
+  width: 350px;
   background: #fff;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 10px rgba(0,0,0,0.16), 0 3px 10px rgba(0,0,0,0.23);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   margin-top: 15px;
   margin-bottom: 15px; 
+  display: flex;
+  flex-direction: row;
 }
 
 .post-card:hover{
@@ -12,10 +14,19 @@
 }
 
 .post-thumb img{
-  width: 400px;
-  height: 300px;
+  width: 140px;
+  height: 200px;
 }
 
 .post-title{
   padding: 10px;
+  background-color: #291f71;
+}
+
+.post-title h3{
+  font-weight: 900;
+}
+
+.post-title p{
+  font-family: 'Varela Round';
 }
