--- a/src/Components/ViewPost.Component/viewPost.css
+++ b/src/Components/ViewPost.Component/viewPost.css
@@ -1,3 +1,92 @@
 .head-section h2{
   color: #fff;
 }
+
+.imageOverlay{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0.5);
+}
+
+.sec{
+  box-sizing: border-box;
+  overflow: auto;
+}
+
+.post-content{
+  float: left;
+  font-family: 'Varela Round';
+  padding: 20px;
+  width: 100%;
+}
+
+.side-content{
+  float: left;
+  width: 100%;
+}
+
+.post-content h1{
+  margin: 60px 0px;
+  font-weight: 900;
+}
+
+.post-content h2{
+  margin: 40px 0px;
+}
+
+.post-content p{
+  font-size: 1.5em;
+  line-height: 1.6em;
+  margin: 30px 10px;
+}
+
+.post-content li {
+  font-size: 1.5em;
+}
+
+.post-content blockquote{
+  border-left: 5px solid rgb(41, 31, 113);
+  color: #666;
+  font-family: 'Hoefler Text', 'Georgia', serif;
+  font-style: italic;
+  margin: 16px 0;
+  padding: 10px 20px;
+  font-size: 1.2em;
+}
+
+#tags-wrapper{
+  padding: 40px 20px;
+}
+
+.tag{
+  padding: 10px 20px;
+  margin: 10px;
+  border-radius: 50px;
+  color: #fff;
+  font-weight: 700;
+}
+
+.tag-red{
+  background: red;
+}
+
+.tag-green{
+  background: green;
+}
+
+.tag-blue{
+  background: darkblue;
+}
+
+@media(min-width:768px){
+  .post-content{
+    width: 66.66%;
+  }
+
+  .side-content{
+    width: 33.34%;
+  }
+}
