--- a/src/Components/home.component/post.css
+++ b/src/Components/home.component/post.css
@@ -17,6 +17,7 @@
   background-position: center;
   padding: 10% 5%;
   text-align: center;
+  min-height: 200px;;
 }
 
 .post-title{
@@ -27,10 +28,13 @@
 
 .post-title h3{
   font-weight: 900;
+  font-family: 'Cuprum';
+  color: #291f71;
 }
 
 .post-title p{
   font-family: 'Varela Round';
+  color: #999;
 }
 
 @media(min-width: 768px){
