Updated to Redux

--- a/src/Components/home.component/home.css
+++ b/src/Components/home.component/home.css
@@ -1,5 +1,5 @@
 .banner{
-  background-image: url('./../../back3.jpeg');
+  background-image: url('./../../assets/back3.jpeg');
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
