--- a/src/Components/Login.Component/login.css
+++ b/src/Components/Login.Component/login.css
@@ -1,6 +1,6 @@
 #login{
   padding-top: 100px; 
-  background: url("./../../login-back.jpg");
+  background: url("./../../assets/login-back.jpg");
   background-attachment: fixed;
   background-position: center;
   background-size: cover; 
