--- a/src/Components/AddPost.Component/editorStyles.css
+++ b/src/Components/AddPost.Component/editorStyles.css
@@ -12,19 +12,19 @@
 }
 
 .editor :global(.public-DraftEditor-content) {
-  min-height: 140px;
+  min-height: 460px;
 }
 
 .rdw-editor-toolbar{
-  position: fixed;
   z-index: 5;
   box-shadow: 0px 3px 3px rgba(0,0,0,0.1), 0px 2px 2px rgba(0,0,0,0.05), 1px 1px 1px rgba(0,0,0,0.01);
   border-radius: 10px;
-  left: 50%;
+  margin-left: 50%;
   transform: translate(-50%);
   justify-content: center;
   max-width: 900px;
   width: 100%;
+  transition: all 0.5s;
 }
 
 .demo-editor{
